fix: card flip on safari

--- a/src/theme/default/components/card.less
+++ b/src/theme/default/components/card.less
@@ -96,14 +96,12 @@ article {
 
 article.flip {
   & [tabindex="0"] {
+      box-shadow: 0 6.4px 14.4px 0 rgba(@shadow-color, 0.132),
+        0 1.2px 3.6px 0 rgba(@shadow-color, 0.108);
     & section {
       background-color: @default-background;
       // prevent tearing on flip
       border: 0.1px solid @default-background;
-    }
-    & > section:first-child {
-      box-shadow: 0 6.4px 14.4px 0 rgba(@shadow-color, 0.132),
-        0 1.2px 3.6px 0 rgba(@shadow-color, 0.108);
     }
   }
 }
